--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .gradle
 /local.properties
+.idea
 /.idea
 /.idea/caches
 /.idea/libraries
@@ -14,3 +15,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/
