--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.11.0"
+guava = "33.4.8-android"
+guavaRetrying = "2.0.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -12,6 +14,8 @@ lombok = "1.18.38"
 slf4j = "2.0.17"
 
 [libraries]
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
+guava-retrying = { module = "com.github.rholder:guava-retrying", version.ref = "guavaRetrying" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
