--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".PhoenixIVApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,8 +16,6 @@
         android:theme="@style/Theme.PhoenixIV"
         tools:targetApi="31">
 
-        <activity android:name=".activity.ReaderActivity" />
-
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
@@ -25,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.MangaActivity" />
+        <activity android:name=".activity.DownloaderActivity" />
+        <activity android:name=".activity.ReaderActivity" />
     </application>
 
 </manifest>
