clean chapter list layer

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,4 +33,5 @@ slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+androidx-room = { id = "androidx.room", version.ref = "roomRuntime" }
 
