--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.LibraryActivity" />
         <activity android:name=".activity.MangaActivity" />
         <activity android:name=".activity.DownloaderActivity" />
         <activity android:name=".activity.ReaderActivity" />
